Fix non-XR orange from bug 319843 - Don't assume that we're using all of the new nsXULAppAPI features.